Fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,45 @@
 /*Sign up*/
 
 
+/* ::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #e62117;
+} */
+
+
+/* Let's get this party started */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+
+/* Track */
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #d6dee1;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+}
+
+
 /* .form-group {
     position: relative;
     min-height: 3.5em;
@@ -104,9 +143,11 @@ body {
 
 .col-70 {
     width: 70%;
+    padding-top: 1rem;
 }
 
 .col-30 {
+    padding-top: 1rem;
     width: 28%;
     margin-left: 2%;
 }
@@ -330,7 +371,8 @@ header nav ul li a.active {
 }
 
 .scroll-horizontal::-webkit-scrollbar {
-    width: 0cm;
+    width: 0px;
+    height: 0px;
 }
 
 .item-anime {
@@ -460,7 +502,7 @@ header nav ul li a.active {
 }
 
 .banner-image img {
-    width: 100%;
+    width: 150%;
     max-width: fit-content;
     border-radius: 10px;
     background-size: contain;
